feat: add marketplace

--- a/marketplace.html
+++ b/marketplace.html
@@ -78,6 +78,62 @@
 								<li class="tag">Serial enterpreneur</li>
 								<li class="tag">New market</li>
 							</ul>
+							<p class="looking-title">Looking for</p>
+							<div class="looking-items">
+								<div class="looking-item">
+									Advisor
+								</div>
+							</div>
+							<button class="button">Request Info</button>
+							<p class="read-more">Read more</p>
+						</div>
+						<div class="item">
+							<h3 class="title">Archeads</h3>
+							<p class="desc">AI system to analyze commercial real estate and greate smart office layouts.</p>
+							<ul class="tags">
+								<li class="tag">Serial enterpreneur</li>
+								<li class="tag">New market</li>
+							</ul>
+							<p class="looking-title">Looking for</p>
+							<div class="looking-items">
+								<div class="looking-item">
+									Advisor
+								</div>
+							</div>
+							<button class="button">Request Info</button>
+							<p class="read-more">Read more</p>
+						</div>
+						<div class="item">
+							<h3 class="title">Archeads</h3>
+							<p class="desc">AI system to analyze commercial real estate and greate smart office layouts.</p>
+							<ul class="tags">
+								<li class="tag">Serial enterpreneur</li>
+								<li class="tag">New market</li>
+							</ul>
+							<p class="looking-title">Looking for</p>
+							<div class="looking-items">
+								<div class="looking-item">
+									Advisor
+								</div>
+							</div>
+							<button class="button">Request Info</button>
+							<p class="read-more">Read more</p>
+						</div>
+						<div class="item">
+							<h3 class="title">Archeads</h3>
+							<p class="desc">AI system to analyze commercial real estate and greate smart office layouts.</p>
+							<ul class="tags">
+								<li class="tag">Serial enterpreneur</li>
+								<li class="tag">New market</li>
+							</ul>
+							<p class="looking-title">Looking for</p>
+							<div class="looking-items">
+								<div class="looking-item">
+									Advisor
+								</div>
+							</div>
+							<button class="button">Request Info</button>
+							<p class="read-more">Read more</p>
 						</div>
 					</div>
 				</div>
