--- a/capitalequity.html
+++ b/capitalequity.html
@@ -70,7 +70,7 @@
 					<div class="capitalequity-menu capitalequity-header__menu">
 						<ul class="capitalequity-menu__list">
 							<li class="capitalequity-menu__item capitalequity-menu__item--selected--white">
-								<a href="#" class="capitalequity-menu__link ">Credit</a>
+								<a href="capitalcredit.html" class="capitalequity-menu__link ">Credit</a>
 							</li>
 							<li class="capitalequity-menu__item capitalequity-menu__item--selected capitalequity-menu__item--selected--gold" >
 								<a href="#" class="capitalequity-menu__link capitalequity-menu__link--selected">Equity</a>
