--- a/marketplace.html
+++ b/marketplace.html
@@ -28,9 +28,9 @@
 						<span class="navbar-toggler__line"></span>
 					</button>
 					
-					<a class="navbar-brand logo mr-lg-5 m-sm-auto" href="#"><img src="img/v-box-logo.png" /></a>
+					<a class="navbar-brand logo mr-lg-5 m-sm-auto" href="index.html"><img src="img/v-box-logo.png" /></a>
 					<div class="abs-login">
-						<a href="#" class="abs-login__link">Log in</a>
+						<a href="registration.html" class="abs-login__link">Log in</a>
 					</div>
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="navbar-nav">
@@ -38,13 +38,13 @@
 								<a class="nav-link" href="#">Product <span class="sr-only">(current)</span></a>
 							</li>
 							<li class="nav-item mr-2">
-								<a class="nav-link" href="#">Capital</a>
+								<a class="nav-link" href="capitalcredit.html">Capital</a>
 							</li>
 							<li class="nav-item mr-2">
-								<a class="nav-link" href="#">Partners</a>
+								<a class="nav-link" href="partners.html">Partners</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Marketplace</a>
+								<a class="nav-link" href="marketplace.html">Marketplace</a>
 							</li>
 						</ul>
 						<ul class="navbar-nav ml-md-auto hidden-on-sm">
@@ -54,7 +54,7 @@
 								</a>
 							</li>
 							<li class="nav-item active">
-								<a class="nav-link ml-4" href="#">Log in <span class="sr-only">(current)</span></a>
+								<a class="nav-link ml-4" href="registration.html">Log in <span class="sr-only">(current)</span></a>
 							</li>
 						</ul>
 					</div>
@@ -150,7 +150,7 @@
 				</div>
 				<div class="row vb-footer-navs mt-3">
 					<div class="col-lg-3 col-5">
-						<h5><a href="#">About</a></h5>
+						<h5><a href="about.html">About</a></h5>
 						<div class="row">
 							<div class="col-6">
 								<h6><a href="#">Press</a></h6>
