--- a/registration.html
+++ b/registration.html
@@ -28,9 +28,9 @@
 						<span class="navbar-toggler__line"></span>
 					</button>
 					
-					<a class="navbar-brand logo mr-lg-5 m-sm-auto" href="#"><img src="img/v-box-logo.png" /></a>
+					<a class="navbar-brand logo mr-lg-5 m-sm-auto" href="index.html"><img src="img/v-box-logo.png" /></a>
 					<div class="abs-login">
-						<a href="#" class="abs-login__link">Log in</a>
+						<a href="registration.html" class="abs-login__link">Log in</a>
 					</div>
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="navbar-nav">
@@ -38,13 +38,13 @@
 								<a class="nav-link" href="#">Product <span class="sr-only">(current)</span></a>
 							</li>
 							<li class="nav-item mr-2">
-								<a class="nav-link" href="#">Capital</a>
+								<a class="nav-link" href="capitalcredit.html">Capital</a>
 							</li>
 							<li class="nav-item mr-2">
-								<a class="nav-link" href="#">Partners</a>
+								<a class="nav-link" href="partners.html">Partners</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Marketplace</a>
+								<a class="nav-link" href="marketplace.html">Marketplace</a>
 							</li>
 						</ul>
 						<ul class="navbar-nav ml-md-auto hidden-on-sm">
@@ -54,7 +54,7 @@
 								</a>
 							</li>
 							<li class="nav-item active">
-								<a class="nav-link ml-4" href="#">Log in <span class="sr-only">(current)</span></a>
+								<a class="nav-link ml-4" href="registration.html">Log in <span class="sr-only">(current)</span></a>
 							</li>
 						</ul>
 					</div>
