--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					<form role="form" class="position-absolute fixed-bottom">
 						<div class="form-group text-left">
 							<label for="exampleInputEmail1">
-								Comapny name
+								Company name
 							</label>
 							<input type="text" class="form-control" placeholder="Company domain name or market name" id="exampleInputCompany" required>
 						</div>
@@ -293,11 +293,11 @@
 						<div class="row">
 							<div class="col-6">
 								<h6><a href="#">Features</a></h6>
-								<h6><a href="#">Capital</a></h6>						
+								<h6><a href="capitalcredit.html">Capital</a></h6>						
 							</div>
 							<div class="col-6">
-								<h6><a href="#">Partners</a></h6>
-								<h6><a href="#">Marketplace</a></h6>
+								<h6><a href="partners.html">Partners</a></h6>
+								<h6><a href="marketplace.html">Marketplace</a></h6>
 							</div>
 						</div>
 
