--- a/partners.html
+++ b/partners.html
@@ -109,11 +109,11 @@
 						<div class="row">
 							<div class="col-6">
 								<h6><a href="#">Features</a></h6>
-								<h6><a href="#">Capital</a></h6>						
+								<h6><a href="capitalcredit.html">Capital</a></h6>						
 							</div>
 							<div class="col-6">
-								<h6><a href="#">Partners</a></h6>
-								<h6><a href="#">Marketplace</a></h6>
+								<h6><a href="partners.html">Partners</a></h6>
+								<h6><a href="marketplace.html">Marketplace</a></h6>
 							</div>
 						</div>
 
