-feat: add login

--- a/product.html
+++ b/product.html
@@ -55,8 +55,11 @@
 										Get Started
 								</a>
 							</li>
-							<li class="nav-item active">
+							<li class="nav-item active" id="login-block">
 								<a class="nav-link ml-4" href="registration.html">Log in <span class="sr-only">(current)</span></a>
+							</li>
+							<li class="nav-item" id="username-block" style="display: none;">
+								<p class="nav-link ml-4" id="username-text">Username</p>
 							</li>
 
 						</ul>
