--- a/about.html
+++ b/about.html
@@ -53,8 +53,11 @@
 										Get Started
 								</a>
 							</li>
-							<li class="nav-item active">
-								<a class="nav-link ml-4" href="#">Log in <span class="sr-only">(current)</span></a>
+							<li class="nav-item active" id="login-block">
+								<a class="nav-link ml-4" href="registration.html">Log in <span class="sr-only">(current)</span></a>
+							</li>
+							<li class="nav-item" id="username-block" style="display: none;">
+								<p class="nav-link ml-4" id="username-text">Username</p>
 							</li>
 						</ul>
 					</div>
