-f fix company fields

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 				name: $("#exampleInputCompany").val(),
 				email: $("#exampleInputEmail1").val()
 			};
-			$.ajax("https://venture-box-back.herokuapp.com/requests.json",{
+			$.ajax("https://venture-box-land.herokuapp.com/requests.json",{
 				data : JSON.stringify(data),
 				contentType : 'application/json',
 				type : 'POST',
