--- a/marketplace.html
+++ b/marketplace.html
@@ -368,7 +368,7 @@
 				interested_in_advisor: $("#checkbox-advisor").is(":checked"),
 				interested_in_purchasing: $("#checkbox-purchasing").is(":checked")
 			};
-			$.ajax("https://venture-box-back.herokuapp.com/requests.json",{
+			$.ajax("https://venture-box-land.herokuapp.com/requests.json",{
 				data : JSON.stringify(data),
 				contentType : 'application/json',
 				type : 'POST',
