--- a/registration.html
+++ b/registration.html
@@ -428,7 +428,7 @@
 				role: "ceo"
 			};
 
-			$.ajax("https://venture-box-land.herokuapp.com/users.json",{
+			$.ajax("https://localhost:3000/users.json",{
 				data : JSON.stringify(dataUser),
 				contentType : 'application/json',
 				type : 'POST',
@@ -474,7 +474,7 @@
 				target_revenue: $('input[name=targetrevenue]:checked').val(),
 			};
 			console.log(dataCompany);
-			$.ajax("https://venture-box-land.herokuapp.com/users/"+user_id+"/companies.json",{
+			$.ajax("https://localhost:3000/users/"+user_id+"/companies.json",{
 				data : JSON.stringify(dataCompany),
 				contentType : 'application/json',
 				type : 'POST',
